# leia

./: .gitignore  404.html  Dockerfile  README.md  colab-notebook.ipynb  colab_notebook.ipynb  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
api/about/: index.html
api/analize/: index.html
api/app/: index.html
api/app_desktop/: index.html
api/app_docker/: index.html
api/app_web/: index.html
api/audio_formats/: index.html
api/database/: index.html
api/folders/: index.html
api/settings/: index.html
api/token_leia/: index.html
api/transcribe/: index.html
api/transcribe_cellebrite/: index.html
api/transcribe_file/: index.html
api/transcribe_folder/: index.html
app/: about.py  analize.py  app.py  app_desktop.py  app_web.py  audio_formats.py  database.py  extract_zip.py  leia.py  main.py  settings.py  token_leia.py  transcribe.py  transcribe_cellebrite.py  transcribe_file.py  transcribe_folder.py
app/api/: routers.py
notebook/: colab_notebook.ipynb
search/: search_index.json
streamlit_app/: about.py  analize.py  app_docker.py  folders.py  main.py  settings.py  token_leia.py
users-guide/: index.html
